test gpa by classtype ignore the name i dont know what the fuck im doing mitchell pls kill me

--- a/testMaleFemale/index.html
+++ b/testMaleFemale/index.html
@@ -40,7 +40,7 @@ var y = d3.scale.linear()
     .range([height, 0]);
 
 var color = d3.scale.ordinal()
-    .range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
+    .range(["#98abc5", "#FFB6C1"]);
 
 var xAxis = d3.svg.axis()
     .scale(x0)
@@ -118,7 +118,6 @@ d3.csv("data.csv", function(error, data) {
       .attr("dy", ".35em")
       .style("text-anchor", "end")
       .text(function(d) { return d; });
-
 });
 
 </script>
